<resources>
    <string name="app_name">ProjectXiphos</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="guest_mode">GUEST MODE</string>
    <string name="themes">THEMES</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
</resources>
